--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,30 @@
+amqp==5.1.1
+billiard==4.1.0
 boto3==1.26.156
 botocore==1.29.156
+celery==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+idna==3.4
 jmespath==1.0.1
+kombu==5.3.1
+numpy==1.25.0
+pandas==2.0.3
+prompt-toolkit==3.0.38
+psycopg2==2.9.6
+py-ball==1.41
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
+requests==2.31.0
 s3transfer==0.6.1
 six==1.16.0
 tqdm==4.65.0
+tzdata==2023.3
 urllib3==1.26.16
+vine==5.0.0
+wcwidth==0.2.6
